kubernetes/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
  namespace: myapp
  labels:
    app: express

spec:
  replicas: 2
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express-app
          image: kariukiantony/express:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      restartPolicy: Always

---
apiVersion: v1
kind: Service 
metadata:
  name: express-service # This is the name that ingress will use.
  namespace: myapp

spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    - protocol: TCP 
      port: 3000
      targetPort: 3000
