kubernetes/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
  labels:
    app: mongo-express
  namespace: myapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express

  template:
    metadata:
      labels:
        app: mongo-express

    spec:
      containers:
        - name: mongo-express-cont
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service

spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
