kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: myapp
  labels:
    app: mongodb

spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - name: mongodb
              containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service 
  namespace: myapp

spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
