kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp

spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80

          - path: "/api/users"
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 3000
